sort.basic.gnome.AlgGnomeSort.scala.error
Erreur de compilation :
AlgGnomeSort:16: error: not found: value a
      a = 1;
      ^